feat(be): add service+controller for breakdown by country, device and video category
